--- a/ltam/modules/web/src/main/webapp/pages/consumer/edit/page7.xhtml
+++ b/ltam/modules/web/src/main/webapp/pages/consumer/edit/page7.xhtml
@@ -18,13 +18,15 @@
                     <div class="ContainerIndent">
                         <p:panel style="height: 60%; width: 100%; background: #f5f5f5;">
                             <div class="EmptyBox5"></div>
-				<p:panelGrid columns="2" styleClass="Container100"
-                                             style="border:0px !important; background:none;" class="FormContent">
+                            <p:panelGrid columns="2" styleClass="Container100"
+                                         style="border:0px !important; background:none;" class="FormContent">
 
                                 <p:outputLabel> Revised Fund: </p:outputLabel>
                                 <p:selectOneMenu styleClass="Wid90"
-                                                 value="#{ceb.theme}">
-                                    <p:ajax listener="#{ceb.selectedTheme}"/>
+                                                 value="#{ceb.selectedThemeName}">
+                                    <p:ajax listener="#{ceb.selectedTheme}"
+                                            update=":ceForm:contentpanel"/>
+                                    <f:selectItem itemLabel="Select One" itemValue="" />
                                     <f:selectItems value="#{ceb.displaythememap.entrySet()}"
                                                    var="themelist" itemLabel="#{themelist.value}"
                                                    itemValue="#{themelist.key}"/>
@@ -101,6 +103,7 @@
                             <br/>
 
                             <h3 class="black f1">#{ceb.origCustomerData.themeData.longDescription}</h3>
+
                             <div class="EmptyBox5"></div>
                         </p:panel>
                     </div>
