--- a/ltam/modules/web/src/main/webapp/pages/consumer/edit/page7.xhtml
+++ b/ltam/modules/web/src/main/webapp/pages/consumer/edit/page7.xhtml
@@ -16,7 +16,7 @@
             <div class="Container100 Responsive50">
                 <div class="Container50 Responsive100">
                     <div class="ContainerIndent">
-                        <p:panel style="height: 60%; width: 100%; background: #f5f5f5;">
+                        <p:panel id="reviewPanel" style="height: 60%; width: 100%; background: #f5f5f5;">
                             <div class="EmptyBox5"></div>
                             <p:panelGrid columns="2" styleClass="Container100"
                                          style="border:0px !important; background:none;" class="FormContent">
@@ -25,7 +25,7 @@
                                 <p:selectOneMenu styleClass="Wid90"
                                                  value="#{ceb.selectedThemeName}">
                                     <p:ajax listener="#{ceb.selectedTheme}"
-                                            update=":ceForm:contentpanel"/>
+                                            update=":ceForm:contentpanel, :ceForm:reviewPanel"/>
                                     <f:selectItem itemLabel="Select One" itemValue="" />
                                     <f:selectItems value="#{ceb.displaythememap.entrySet()}"
                                                    var="themelist" itemLabel="#{themelist.value}"
