LTAM version 3,0 - Conflict with messagesource on web.  Had to rename the bean id.

--- a/ltam/modules/web/src/main/webapp/pages/consumer/address.xhtml
+++ b/ltam/modules/web/src/main/webapp/pages/consumer/address.xhtml
@@ -144,7 +144,7 @@
                                         </p:outputLabel>
                                     </div>
                                     <div class="Container40">
-                                        <p:inputMask styleClass="Wid90" placeholder="WorkPhone#"
+                                        <p:inputMask styleClass="Wid90" placeholder="Fax#"
                                                      value="#{ctob.accountdata.faxNbr}"
                                                      mask="(999) 999-9999">
                                         </p:inputMask>
