--- a/ltam/modules/web/src/main/webapp/pages/consumer/edit/page9.xhtml
+++ b/ltam/modules/web/src/main/webapp/pages/consumer/edit/page9.xhtml
@@ -23,7 +23,7 @@
                     <td class="TexAlRight" style="width: 25%">Amount</td>
                 </tr>
                 <tr>
-                    <td class="TexAlLeft" style="width: 75%">#{ceb.securityname}</td>
+                    <td class="TexAlLeft" style="width: 75%">#{ceb.themeData.securityname}</td>
                     <td class="TexAlRight" style="width: 25%">
                         <h:outputText value="#{ceb.investment}">
                             <f:convertNumber currencySymbol="$" type="currency"/>
