LTAM version 3.0 - Introducing Web-Service integration

--- a/symbil/modules/web/src/main/webapp/pages/consumer/edit/final.xhtml
+++ b/symbil/modules/web/src/main/webapp/pages/consumer/edit/final.xhtml
@@ -7,7 +7,7 @@
 
     <div class="Container100 TextAlCenter">
         <div class="TexAlCenter">
-            <h1 class="black Fs24 fnt1">#{ltamprofile.firstname}, based on your answers,
+            <h1 class="black Fs24 fnt1">#{ceb.firstname}, based on your answers,
                 your recommended objective is:</h1>
         </div>
         
