--- a/symbil/modules/web/src/main/webapp/pages/consumer/review.xhtml
+++ b/symbil/modules/web/src/main/webapp/pages/consumer/review.xhtml
@@ -40,7 +40,7 @@
                   action="#{uiLayout.uiprofile.forwardURL}"
                   target="_self">
                 <p:panel id="inputArea" style="border: 0px; background: transparent; height: 270px">
-                    <ui:include src="/pages/try/addon/final.xhtml"/>
+                    <ui:include src="/pages/consumer/edit/final.xhtml"/>
                     
                     <input type="hidden" name="TimeToSaveUserId" value="#{ceb.timeToSaveID}"/>
                     <input type="hidden" name="InvestorFirstName" value="#{ceb.firstname}"/>
